// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SecretsOrchestrator Advanced Merge Tests > includes correct SecretOrigin metadata and snapshots effect 1`] = `
[
  {
    "identifier": "test",
    "managerName": "svc",
    "providerName": "kubernetes",
    "secretType": "Kubricate.InMemory",
    "stackName": "stack1",
    "type": "kubectl",
    "value": {
      "data": {
        "API_KEY": ""12345"",
      },
      "kind": "Secret",
      "metadata": {
        "name": "test",
        "provider": "kubernetes",
      },
    },
  },
]
`;

exports[`SecretsOrchestrator Multi-Level Merge Strategy > snapshots multiple secrets from the same manager 1`] = `
[
  {
    "identifier": "merged-secret",
    "managerName": "svc",
    "providerName": "kubernetes",
    "secretType": "Kubricate.InMemory",
    "stackName": "stack1",
    "type": "kubectl",
    "value": {
      "data": {
        "DB_USER": "admin",
      },
      "kind": "Secret",
      "metadata": {
        "name": "merged-secret",
        "provider": "kubernetes",
      },
    },
  },
  {
    "identifier": "merged-secret",
    "managerName": "svc",
    "providerName": "kubernetes",
    "secretType": "Kubricate.InMemory",
    "stackName": "stack1",
    "type": "kubectl",
    "value": {
      "data": {
        "DB_PASS": "s3cr3t",
      },
      "kind": "Secret",
      "metadata": {
        "name": "merged-secret",
        "provider": "kubernetes",
      },
    },
  },
]
`;
